PROD Installation/ingress/dotnet-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dotnet-ingress
  namespace: dotnet-app
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: dotnet.local   # change this to your domain or /etc/hosts entry
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dotnet-application
            port:
              number: 80
