PROD Installation/ingress/python-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-ingress
  namespace: python-app
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: python.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: python-application
            port:
              number: 80
